--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
 
   cool_alert: ^1.1.0
   shared_preferences: ^2.0.13
+  firebase_core: ^1.12.0
+  firebase_analytics: ^9.1.1
+  firebase_messaging_platform_interface: 3.1.6
 
 
 dev_dependencies:
